# bitrix

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  WORKFLOW.md  docker-compose.prod.yml  docker-compose.yml
.ai/: report.md  task.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  local_database.py  main.py
backend/app/api/: __init__.py  models.py
backend/app/bitrix/: __init__.py  allowlist.py  client.py  contact_type_metadata.py  discovery.py  ingestion.py  transform.py
backend/app/core/: auth.py  config.py
backend/app/domain/: __init__.py  contact_selection.py  contact_type_resolution.py  models.py
backend/app/pipeline/: __init__.py  approved_contact_type_rules.py  currency_rates.py  local_refresh.py  manual_refresh.py  normalization.py  synthetic.py  synthetic_dataset.py
backend/app/reports/: __init__.py  analytics.py  contact_deal_diagnostics.py  contact_type_mapping.py  local.py  profile.py
backend/app/storage/: __init__.py  connection.py  loaders.py  schema.py  snapshots.py  status.py
backend/tests/: test_analytics.py  test_api_bitrix.py  test_api_local.py  test_auth.py  test_bitrix_client.py  test_bitrix_discovery.py  test_bitrix_ingestion.py  test_contact_deal_diagnostics.py  test_contact_selection.py  test_contact_type_metadata.py  test_dataset_profile.py  test_health.py  test_live_data_readiness.py  test_pipeline.py  test_storage_schema.py  test_synthetic_dataset.py
backend/tests/fixtures/: __init__.py  synthetic_dataset.py
design-system/: README.md
docs/: architecture.md  fixtures.md  (+5 more)
(+61 files in other folders)
