[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bitrix-sales-analytics-backend"
version = "0.1.0"
description = "Backend scaffold for Bitrix sales analytics MVP."
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1,<2.0",
    "fastapi>=0.115,<1.0",
    "polars>=1.0,<2.0",
    "pydantic-settings>=2.6,<3.0",
    "pyarrow>=18.0,<23.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
packages = [
    "app",
    "app.api",
    "app.bitrix",
    "app.core",
    "app.domain",
    "app.pipeline",
    "app.reports",
    "app.storage",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
